--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-dev": "NODE_ENV=development nodemon index.js",
+    "start-dev": "nodemon index.js",
     "start": "node index.js",
     "install-globals": "npm install typescript -g nodemon -g"
   },
@@ -20,14 +20,14 @@
     "mongodb": "^4.8.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.22",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/joi": "^17.2.3",
     "@types/express": "^4.17.12",
+    "@types/joi": "^17.2.3",
     "@types/node": "^15.12.2"
   },
   "keywords": [],
