--- a/examples/typescript/package.json
+++ b/examples/typescript/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "zod": "^3.24.1"
   }
 }
