--- a/react-client-application/package.json
+++ b/react-client-application/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router": "^5.1.20",
+    "i": "^0.3.7",
+    "npm": "^11.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
