--- a/react-client-application/package.json
+++ b/react-client-application/package.json
@@ -15,7 +15,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.1",
     "@types/axios": "^0.9.36",
+    "@types/lodash": "^4.17.13",
     "axios": "^1.7.9",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.13"
