--- a/react-client-application/package.json
+++ b/react-client-application/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.1.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.15.3"
   },
