--- a/react-client-application/package.json
+++ b/react-client-application/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.2.1",
     "@types/axios": "^0.9.36",
     "@types/lodash": "^4.17.13",
