--- a/react-client-application/package.json
+++ b/react-client-application/package.json
@@ -17,11 +17,13 @@
     "@mui/material": "^6.2.1",
     "@types/axios": "^0.9.36",
     "@types/lodash": "^4.17.13",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.7.9",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
+    "recharts": "^2.15.0",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.15.3"
   },
