--- a/react-client-application/package.json
+++ b/react-client-application/package.json
@@ -25,7 +25,8 @@
     "react-router": "^7.1.1",
     "recharts": "^2.15.0",
     "styled-components": "^6.1.13",
-    "sweetalert2": "^11.15.3"
+    "sweetalert2": "^11.15.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
