--- a/react-client-application/package.json
+++ b/react-client-application/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.2.1",
     "@types/axios": "^0.9.36",
+    "@types/date-fns": "^2.5.3",
     "@types/lodash": "^4.17.13",
     "@types/recharts": "^1.8.29",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
