--- a/react-client-application/package.json
+++ b/react-client-application/package.json
@@ -17,11 +17,14 @@
     "@mui/material": "^6.2.1",
     "@types/axios": "^0.9.36",
     "@types/date-fns": "^2.5.3",
+    "@types/express": "^5.0.0",
     "@types/lodash": "^4.17.13",
     "@types/recharts": "^1.8.29",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "express": "^4.21.2",
     "lodash": "^4.17.21",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
