--- a/react-client-application/package.json
+++ b/react-client-application/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
     "lodash": "^4.17.21",
+    "millify": "^6.1.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
