--- a/react-client-application/package.json
+++ b/react-client-application/package.json
@@ -9,17 +9,19 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "bundle-size":"source-map-explorer ./dist/assets/*.js"
+    "bundle-size": "source-map-explorer ./dist/assets/*.js"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.2.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "@types/axios": "^0.9.36",
     "@types/date-fns": "^2.5.3",
     "@types/express": "^5.0.0",
     "@types/lodash": "^4.17.13",
+    "@types/react-redux": "^7.1.34",
     "@types/recharts": "^1.8.29",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
@@ -31,6 +33,7 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
     "recharts": "^2.15.0",
     "source-map-explorer": "^2.5.3",
